--- a/style.css
+++ b/style.css
@@ -10,4 +10,36 @@ h1 {
   color: black;
   display: inline-block;
   font-size: 20px;
+  
+}
+
+
+/*CSS 3 animation */
+.flash {
+ -moz-animation: flash 2s ease-out;
+ -moz-animation-iteration-count: 1;
+
+ -webkit-animation: flash 2s ease-out;
+ -webkit-animation-iteration-count: 1;
+
+ -ms-animation: flash 2s ease-out;
+ -ms-animation-iteration-count: 1;
+}
+
+@-webkit-keyframes flash {
+   0% { background-color: none; }
+   50% { background-color: #fbf8b2 ; }
+   100% { background-color: none; }
+}
+
+@-moz-keyframes flash {
+   0% { background-color: none; }
+   50% { background-color: #fbf8b2 ; }
+   100% { background-color: none; }
+}
+
+@-ms-keyframes flash {
+   0% { background-color: none; }
+   50% { background-color: #fbf8b2 ; }
+   100% { background-color: none; }
 }
