--- a/style.css
+++ b/style.css
@@ -19,18 +19,36 @@ h1 {
   font-weight: 500;
   line-height: 30px;
 }
+#round-count {
+  font-family: 'Permanent Marker', cursive;
+  font-weight: 300;
+  font-size: 40px;
+  color: red;
+  text-shadow: #444 2px 2px 4px;
+}
 
-.trackers {
+#player-turn{
+  font-family: 'Permanent Marker', cursive;
+  font-weight: 300;
+  font-size: 32px;
+  color: white;
+  text-shadow: #444 2px 2px 4px;
+
+}
+.text-center {
   text-align: center;
 }
+
 
 #dice-board {
   border: 2px solid white;
   width: 400px;
   height: 150px;
-  margin-top: 100px;
+/*  margin-top: 80px;*/
  /* background-color: white;*/
 }
+
+
 
 .dice {
   display: inline;
@@ -39,34 +57,32 @@ h1 {
   /*text-align: center;  */ 
 }
 
-
-
-/*CSS 3 animation */
-.flash {
- -moz-animation: flash 2s ease-out;
- -moz-animation-iteration-count: 1;
-
- -webkit-animation: flash 2s ease-out;
- -webkit-animation-iteration-count: 1;
-
- -ms-animation: flash 2s ease-out;
- -ms-animation-iteration-count: 1;
+.btn {
+  font-family: 'Play', sans-serif;
+  font-size: 20px;
+  margin: 25px;
 }
 
-@-webkit-keyframes flash {
-   0% { background-color: none; }
-   50% { background-color: #fbf8b2 ; }
-   100% { background-color: none; }
+#current-roll-score {
+  font-family: 'Permanent Marker', cursive;
+  font-weight: 300;
+  font-size: 25px;
+  text-shadow: #444 1.5px 1.5px 3px;
 }
 
-@-moz-keyframes flash {
-   0% { background-color: none; }
-   50% { background-color: #fbf8b2 ; }
-   100% { background-color: none; }
+#player1-scores {
+  margin-top: 10px;
+  font-family: 'Permanent Marker', cursive;
+  font-weight: 300;
+  font-size: 25px;
+  text-shadow: #444 1.5px 1.5px 3px;
 }
 
-@-ms-keyframes flash {
-   0% { background-color: none; }
-   50% { background-color: #fbf8b2 ; }
-   100% { background-color: none; }
+#player2-scores {
+  margin-top: 25px;
+  font-family: 'Permanent Marker', cursive;
+  font-weight: 300;
+  font-size: 25px;
+  text-shadow: #444 1.5px 1.5px 3px;
 }
+
