added styles and animation

--- a/style.css
+++ b/style.css
@@ -6,9 +6,20 @@ body {
   color: white;
 }
 
+.glyphicon {
+  margin-top: -50px;
+  font-size: 25px;
+  text-decoration: none;
+  color: white !important;
+}
+
+.glyph-span {
+
+  padding-left: 10px;
+}
 
 h1 {
-  margin-top: 50px;
+  margin-top: 100px;
   color: white;
   text-align: center;
   font-size: 50px;
@@ -39,11 +50,21 @@ h1 {
   text-align: center;
 }
 
+.scores {
+  /*margin-top: 10px;*/
+  font-family: 'Permanent Marker', cursive;
+  font-weight: 300;
+  font-size: 25px;
+  text-shadow: #444 1.5px 1.5px 3px;
+  color: red;
+
+}
 
 #dice-board {
-  border: 2px solid white;
+/*  border: 2px solid white;*/
   width: 400px;
   height: 150px;
+  margin-left: 70px;
 /*  margin-top: 80px;*/
  /* background-color: white;*/
 }
@@ -53,14 +74,21 @@ h1 {
 .dice {
   display: inline;
   font-size: 10rem; 
-  margin-left: 9px; 
-  /*text-align: center;  */ 
-}
+  margin-left: 13px; 
+  /*text-align: center;  */
+/*  -webkit-animation-duration: .5s;
+  -webkit-animation-delay: 1s;*/
+/*  -webkit-animation-iteration-count: infinite;*/
+} 
+
 
 .btn {
   font-family: 'Play', sans-serif;
   font-size: 20px;
   margin: 25px;
+}
+.btn:focus {
+outline: none;
 }
 
 #current-roll-score {
@@ -86,3 +114,15 @@ h1 {
   text-shadow: #444 1.5px 1.5px 3px;
 }
 
+#winner {
+  color: red;
+  text-align: center;
+  font-size: 50px;
+  text-shadow: #444 3px 3px 6px;
+  font-family: 'Slackey', cursive;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 500;
+  line-height: 30px;
+
+}
