--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
 body {
   background-image: url("wood-background5.jpg");
-  background-size: 100%;
+  background-size: 97% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+  background-position-y: 28px;
+}
+
+/*.container {
+  background-image: url("wood-background5.jpg");
+  background-size: 90% 100%;
   background-position: center;
   background-repeat: no-repeat;
   color: white;
 }
-
+*/
 .sweet {
   color: black;
 }
@@ -22,6 +31,21 @@ body {
   padding-left: 10px;
 }
 
+
+.modal-content {
+  color: black;
+  font-size: 15px;
+}
+
+.modal-title{
+  font-family: 'Slackey', cursive;
+  color: red;
+  font-size: 30px;
+  font-weight: 50px;
+  text-shadow: #444 3px 3px 6px;
+  text-align: center;
+
+}
 h1 {
   margin-top: 100px;
   color: white;
@@ -102,6 +126,29 @@ outline: none;
   text-shadow: #444 1.5px 1.5px 3px;
 }
 
+#p1 {
+
+  margin-top: 10px;
+  font-family: 'Permanent Marker', cursive;
+  font-weight: 300;
+  font-size: 25px;
+  text-shadow: #444 1.5px 1.5px 3px;
+
+}
+
+#p2 {
+
+  margin-top: 10px;
+  font-family: 'Permanent Marker', cursive;
+  font-weight: 300;
+  font-size: 25px;
+  text-shadow: #444 1.5px 1.5px 3px;
+
+}
+ 
+
+
+
 #player1-scores {
   margin-top: 10px;
   font-family: 'Permanent Marker', cursive;
@@ -122,7 +169,7 @@ outline: none;
   color: red;
   text-align: center;
   font-size: 50px;
-  text-shadow: #444 3px 3px 6px;
+  text-shadow: #FFFFFF 3px 3px 6px;
   font-family: 'Slackey', cursive;
   font-style: normal;
   font-variant: normal;
