--- a/style.css
+++ b/style.css
@@ -1,12 +1,21 @@
 /*@media (min-width: 600px) { */
 
-body {
+/*body {
   background-image: url("wood-background5.jpg");
   background-size: 97% 100%;
   background-position: center;
   background-repeat: no-repeat;
   color: white;
   background-position-y: 40px;
+}*/
+
+body {
+  background-image: url("wood-background5.jpg");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color: white;
 }
 .sweet {
   color: black;
@@ -134,9 +143,9 @@ outline: none;
   line-height: 30px;
 }
 .centerBlock {
-  display: table;
+/*  display: table;
   margin: 0 auto;
-  margin-bottom: -10px;
+  margin-bottom: -10px;*/
 }
 /* Large desktop */
 @media (min-width: 1200px) { 
